package entity

type Category struct {
	Id    int    `json:"id"`
	Group int    `json:"group"`
	Name  string `json:"name"`
}
