package entity

type Group struct {
	Id   int    `json:"id"`
	User string `json:"user"`
	Name string `json:"name"`
}
